Fix Issues with designs on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -327,7 +327,7 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     width: 100%;
     height: 800px;
-    background: linear-gradient(to bottom, #c09a72 0%, rgba(192, 154, 114, 0.1) 60%, black 100%);
+    background: #c09a72;
     left: 0;
     mix-blend-mode: color; }
   .youtube img {
